<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/shoujian_dialog"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <EditText
            android:id="@+id/standard"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:inputType="text"
            android:hint="@string/yimei_standard"
            android:labelFor="@+id/standard" android:enabled="false" />

    <EditText
            android:id="@+id/value1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:inputType="text"
            android:hint="@string/yimei_value1"
            android:labelFor="@+id/value1" />

    <EditText
            android:id="@+id/value2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:hint="@string/yimei_value2"
            android:inputType="text"
            android:labelFor="@+id/value2" />

    <EditText
            android:id="@+id/value3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:hint="@string/yimei_value3"
            android:inputType="text"
            android:labelFor="@+id/value3" />

    <EditText
            android:id="@+id/value4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:hint="@string/yimei_value4"
            android:inputType="text"
            android:labelFor="@+id/value4" />

    <EditText
            android:id="@+id/value5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:hint="@string/yimei_value5"
            android:inputType="text"
            android:labelFor="@+id/value5" />
    <EditText
            android:id="@+id/value6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:hint="@string/yimei_value6"
            android:inputType="text"
            android:labelFor="@+id/value6" />

    <EditText
            android:id="@+id/remark"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:inputType="text"
            android:hint="@string/yimei_remark"
            android:labelFor="@+id/remark" />

</LinearLayout>