<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:filterTouchesWhenObscured="true"
              android:fitsSystemWindows="false"
              android:orientation="vertical"
              android:background="@color/mainBKColor">

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageButton android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/img_sj" android:src="@drawable/shoujian"
                     android:layout_margin="25dp"
                     android:background="@color/mainBKColor"
                     android:layout_gravity="center_horizontal"
                     android:contentDescription="@string/yimei_shoujian"
                     android:tooltipText="@string/yimei_shoujian"
                     tools:targetApi="o" android:paddingTop="20dp"/>

        <ImageButton android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/img_xj" android:src="@drawable/xunjian"
                     android:paddingTop="20dp" android:layout_margin="25dp"
                     android:background="@color/mainBKColor"
                     android:layout_gravity="center_horizontal"
                     android:contentDescription="@string/yimei_xunjian"
                     android:tooltipText="@string/yimei_xunjian"
                     tools:targetApi="o"/>

    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageButton android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/img_oqc"
                     android:src="@drawable/qc_chuhuo_jianyan"
                     android:layout_margin="25dp"
                     android:background="@color/mainBKColor"
                     android:layout_gravity="center_horizontal"
                     android:contentDescription="@string/yimei_OQC"
                     android:tooltipText="@string/yimei_OQC"
                     tools:targetApi="o" android:paddingTop="20dp"/>

        <ImageButton android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/img_wxok" android:src="@drawable/xunjian"
                     android:paddingTop="20dp" android:layout_margin="25dp"
                     android:background="@color/mainBKColor"
                     android:layout_gravity="center_horizontal"
                     android:contentDescription="@string/yimei_wxok"
                     android:tooltipText="@string/yimei_wxok"
                     tools:targetApi="o"/>


    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageButton android:layout_width="120dp"
                     android:layout_height="150dp"
                     android:id="@+id/img_wxng"
                     android:src="@drawable/qc_chuhuo_jianyan"
                     android:layout_margin="25dp"
                     android:background="@color/mainBKColor"
                     android:layout_gravity="center_horizontal"
                     android:contentDescription="@string/yimei_wxng"
                     android:tooltipText="@string/yimei_wxng"
                     tools:targetApi="o" android:paddingTop="20dp"/>
    </LinearLayout>

</LinearLayout>
