<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/tab_ui_sc">
        <TableLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
                     android:paddingTop="10dp"
                     android:stretchColumns="1"
                     android:id="@+id/tab_ui">

            <TableRow android:layout_width="match_parent" android:paddingTop="8dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yimei_opc"
                        android:textSize="16sp"
                        android:paddingBottom="2dp"/>

                <com.yimeinew.view.AuxText
                        android:id="@+id/edt_opc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:enabled="true"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:textColor="@color/text_color"
                        android:nextFocusDown="@id/edt_opc"
                        android:hint="@string/yimei_opc"
                        android:tag="@string/yimei_opc"
                        android:layout_span="3"/>

            </TableRow>
            <TableRow android:layout_width="match_parent" android:paddingTop="8dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/danpan_number"
                        android:textSize="16sp"/>

                <EditText
                        android:id="@+id/edt_dpn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:enabled="true"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:textSize="16sp"

                        android:textColor="@color/text_color"
                        android:hint="@string/danpan_number"
                        android:tag="@string/danpan_number"
                        android:layout_span="3"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:paddingTop="8dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yimei_code"
                        android:textSize="16sp"/>
                <EditText
                        android:id="@+id/edt_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:enabled="true"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:textColor="@color/text_color"
                        android:hint="@string/yimei_code"
                        android:tag="@string/yimei_code"
                        android:layout_span="3"/>
            </TableRow>

        </TableLayout>
    </ScrollView>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tab_ui_sc"
            android:id="@+id/jishu">

        <TextView
                android:text="@string/yimei_jishu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
        />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_jishu"
                android:focusable="false"
                android:longClickable="false"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/jishu"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:id="@+id/tips_linearLayout">
        <TextView
                android:text="@string/bxsl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bxsl"
                android:focusable="false"
                android:longClickable="false"
                android:gravity="center"
                android:inputType="text"
                android:layout_weight="1"/>

        <TextView
                android:text="@string/oksl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/oksl"
                android:focusable="false"
                android:longClickable="false"
                android:gravity="center"
                android:inputType="text"
                android:layout_weight="1"/>
        <TextView
                android:text="@string/ngsl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:longClickable="false"
                android:gravity="center"
                android:inputType="text"
                android:id="@+id/ngsl"
                android:layout_weight="1"/>
        <TextView
                android:text="@string/wqr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:longClickable="false"
                android:gravity="center"
                android:inputType="text"
                android:id="@+id/wqr"
                android:layout_weight="1"/>


    </LinearLayout>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tips_linearLayout" android:padding="5dp"
                    android:background="@color/mainBKColor">
        <com.yimeinew.tableui.TablePanelView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/table_view">
            <ListView
                    android:id="@+id/data_list_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fastScrollEnabled="false"
                    android:overScrollMode="never"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"/>
        </com.yimeinew.tableui.TablePanelView>
    </RelativeLayout>

</RelativeLayout>